A number of changes, now scripts can be run both locally and inside the container